0.5.2 (12/5/2008)

  - The component registration handler for views (functions or class
    instances) now observes component adaptation annotations (see
    ``zope.component.adaptedBy``) and uses them before the fallback
    values for ``for_`` and ``request_type``. This change does not
    affect existing code insomuch as the code does not rely on these
    defaults when an annotation is set on the view (unlikely).  This
    means that for a new-style class you can do
    ``zope.component.adapts(ISomeContext, ISomeRequest)`` at class
    scope or at module scope as a decorator to a bfg view function you
    can do ``@zope.component.adapter(ISomeContext, ISomeRequest)``.
    This differs from r.bfg.convention inasmuch as you still need to
    put something in ZCML for the registrations to get done; it's only
    the defaults that will change if these declarations exist.

  - Strip all slashes from end and beginning of path in clean_path
    within traversal machinery.

0.5.1 (11/25/2008)

  - Add ``keys``, ``items``, and ``values`` methods to
    ``testing.DummyModel``.

  - Add __delitem__ method to ``testing.DummyModel``.

0.5.0 (11/18/2008)

  - Fix ModelGraphTraverser; don't try to change the ``__name__`` or
    ``__parent__`` of an object that claims it implements ILocation
    during traversal even if the ``__name__`` or ``__parent__`` of the
    object traversed does not match the name used in the traversal
    step or the or the traversal parent .  Rationale: it was insane to
    do so. This bug was only found due to a misconfiguration in an
    application that mistakenly had intermediate persistent
    non-ILocation objects; traversal was causing a persistent write on
    every request under this setup.

  - ``repoze.bfg.location.locate`` now unconditionally sets
    ``__name__`` and ``__parent__`` on objects which provide ILocation
    (it previously only set them conditionally if they didn't match