@@ -1,3 +1,14 @@
+Next release
+
+  - Remove the ``ITestingTemplateRenderer`` interface.  When
+    ``testing.registerDummyRenderer`` is used, it now registers a
+    dummy implementation using ``ITemplateRenderer`` interface, which
+    is checked for when the built-in templating facilities do
+    rendering.  This change also allows developers to make explcit
+    named utility registrations in the ZCML registry against
+    ``ITemplateRenderer``; these will be found before any on-disk
+    template.
+ 
 0.5.2 (12/5/2008)
 
   - The component registration handler for views (functions or class
